<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="10sp"
    android:layout_marginEnd="10sp"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".WishGift"
    tools:showIn="@layout/activity_wish_gift">

    <TextView
        android:id="@+id/lblWishGiftTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30sp"
        android:text="@string/lblWishGiftTitle"
        android:textAlignment="center"
        android:textSize="@dimen/titleSize" />

    <TextView
        android:id="@+id/lblName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lblName"
        android:textSize="@dimen/lblWishGift" />

    <EditText
        android:id="@+id/txtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="@dimen/txtWishGift"
        tools:text="Name" />

    <TextView
        android:id="@+id/lblDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30sp"
        android:text="@string/lblDescription"
        android:textSize="@dimen/lblWishGift" />

    <EditText
        android:id="@+id/txtDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="@dimen/txtWishGift"
        tools:text="@string/lblDescription" />

    <ImageView
        android:id="@+id/imgPicture"
        android:layout_width="150sp"
        android:layout_height="150sp"
        android:layout_gravity="center"
        android:layout_marginTop="40sp"
        android:contentDescription="@string/imgContentDesc"
        android:src="@android:drawable/ic_menu_camera" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginTop="80sp"
        android:text="@string/btnSave"
        android:textSize="24sp" />

</LinearLayout>